# hse-hw-advanced-python

./: README.md
hw_1/artifacts/: example_first_text_file  example_second_text_file  task_1_first_file_result_output  task_1_stdin_result  task_2_first_second_third_file_result_output  task_2_stdin_result  task_3_first_file_result_output  task_3_first_second_third_file_result_output  task_3_stdin_result
hw_1/src/: task_1.py  task_2.py  task_3.py
hw_2/: Dockerfile  docker-compose.yml  task_1_tex_generator.py
hw_2/artifacts/: task_1.tex
hw_2/artifacts/task_2/: link_to_pypi.txt
hw_2/latex_components_generator/latex_components_generator/: table_latex_generator.py
hw_2/latex_document_generator/: pyproject.toml
hw_2/latex_document_generator/latex_document_generator/: generator.py
hw_3/: task1.py  task2.py  task3.py
hw_3/artifacts/task_1/: matrix*.txt  matrix+.txt  matrix1.txt  matrix2.txt  matrix@.txt
hw_3/artifacts/task_2/: matrix*.txt  matrix+.txt  matrix1.txt  matrix2.txt  matrix@.txt
hw_3/artifacts/task_3/: A.txt  AB.txt  C.txt  CD.txt  D.txt  hash.txt
hw_3/matrix/: __init__.py  matrix.py
hw_3/mixins/: mixin.py
hw_4/: task_1.py  task_2.py  task_3.py
hw_4/artifacts/task_1/: task_1.txt
hw_4/artifacts/task_2/: task_2.txt
hw_4/artifacts/task_3/: task_3.txt
